--- a/design_salon.css
+++ b/design_salon.css
@@ -29,6 +29,8 @@
     padding: 0% 0%;
     border-radius: 25%;
     width: 5vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
 }
 
 .social_media:hover {
@@ -52,10 +54,8 @@
     transform: translate(-50%, -50%);
 }
 
-.center2 {
-    position: absolute;
-    top: 92.5%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.inner
+{
+    float:left;
 }
+
