--- a/design_salon.css
+++ b/design_salon.css
@@ -28,6 +28,7 @@
     padding: 0% 0%;
     border-radius: 25%;
     width: 5vh;
+    margin-top: 0.2vw;
     margin-left: 1vw;
     margin-right: 1vw;
 }
@@ -46,17 +47,11 @@
 }
 
 .center {
-    width: 90vw;
     position:absolute;
     top: 80.7%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-}
-
-.inner
-{
-    float:left;
 }
 
 .block {
